[gd_scene load_steps=23 format=2]

[ext_resource path="res://entities/enemies/goo/goo.gd" type="Script" id=1]
[ext_resource path="res://assets/spritesheets/goo.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=21]
radius = 3.0
height = 6.0

[sub_resource type="Animation" id=2]
resource_name = "attack"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Viewport/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "do_attack"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "dead"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Viewport/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=4]
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Viewport/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=5]
length = 0.4
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Viewport/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4 ]
}

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "dead"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=10]

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachine" id=17]
states/attack/node = SubResource( 6 )
states/attack/position = Vector2( 370, 236 )
states/dead/node = SubResource( 7 )
states/dead/position = Vector2( 139, 219 )
states/idle/node = SubResource( 8 )
states/idle/position = Vector2( 209, 51 )
states/walk/node = SubResource( 9 )
states/walk/position = Vector2( 539, 51 )
transitions = [ "idle", "walk", SubResource( 10 ), "walk", "idle", SubResource( 11 ), "idle", "attack", SubResource( 12 ), "attack", "idle", SubResource( 13 ), "walk", "attack", SubResource( 14 ), "attack", "walk", SubResource( 15 ), "idle", "dead", SubResource( 16 ) ]
start_node = "idle"
end_node = "dead"

[sub_resource type="AnimationNodeStateMachinePlayback" id=18]

[sub_resource type="CircleShape2D" id=19]

[sub_resource type="CircleShape2D" id=20]
radius = 20.0

[node name="Goo" type="KinematicBody2D" groups=[
"Goo",
]]
collision_layer = 4
collision_mask = 16
script = ExtResource( 1 )
speed = 30

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=[
"Hitbox",
]]
position = Vector2( 0, 5 )
rotation = 1.5708
shape = SubResource( 21 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 2 )
anims/dead = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/walk = SubResource( 5 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 17 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 18 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 16, 16 )
transparent_bg = true
hdr = false
disable_3d = true
usage = 0
render_target_v_flip = true
render_target_update_mode = 3

[node name="Sprite" type="Sprite" parent="Viewport"]
light_mask = 2
position = Vector2( 8, 8 )
texture = ExtResource( 2 )
hframes = 9
frame = 5

[node name="DetonationDetectionArea" type="Area2D" parent="."]
position = Vector2( 0, 5 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetonationDetectionArea"]
position = Vector2( 0, -1 )
shape = SubResource( 19 )

[node name="DetonationArea" type="Area2D" parent="."]
position = Vector2( 0, 5 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetonationArea"]
position = Vector2( 0, -1 )
shape = SubResource( 20 )

[connection signal="body_entered" from="DetonationDetectionArea" to="." method="on_attack"]
[connection signal="body_entered" from="DetonationArea" to="." method="on_enemy_entered"]
[connection signal="body_exited" from="DetonationArea" to="." method="on_enemy_exited"]
